# hcat

./: .hlint.yaml  README.md  flake.nix  hcat.cabal  justfile
app/: Main.hs
src/: HCat.hs
