cabal-version:      2.4
name:               hcat
version:            0.1.0.0
license:            MIT
copyright:          2024 Thomas Laich
maintainer:         thomaslaich@gmail.com
author:             Thomas Laich
category:           Web
homepage:           https://www.github.com/thomaslaich/hcat

-- A short (one-line) description of the package.
synopsis:
  A simple command line utility for paging through a file (same as cat but written in Haskell)

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

library
  hs-source-dirs:     src
  build-depends:
    , base
    , bytestring
    , directory
    , process
    , text
    , time

  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    RecordWildCards

  exposed-modules:    HCat
  hs-source-dirs:     src
  default-language:   Haskell2010

executable hcat
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base
    , hcat

  default-language: Haskell2010
